--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,10 @@ build/
 dist/
 ### JSDoc template
 docs/
+.eslintignore
+.eslintrc.js
+.prettierrc.js
+package-lock.json
+package.json
+postcss.config.js
+tsconfig.json
